compilador/codigo/CompiladorSloth.java
/* CompiladorSloth.java */
/* Generated By:JavaCC: Do not edit this line. CompiladorSloth.java */
import java.io.File;
import java.io.FileReader;
import java.io.IOException;

public class CompiladorSloth implements CompiladorSlothConstants {
    private static Codigo cod = new Codigo(tokenImage);

        public static void main(String[] args) throws ParseException
        {
                try
                {
                        System.out.println("\n--->  Sloth Compiler  <---\n");
                        CompiladorSloth analizador = new CompiladorSloth(System.in) ;
                        analizador.Programa();
                        System.out.println("--- Compilado sem erros ---");
                }
                catch(ParseException e)
                {
                        System.out.println("Analyzer: errors were found!");
                        System.out.println(e.getMessage());
                }
                finally{
                        cod.printTokens();
                        //cod.printVars();
                }
        }

  final public void Programa() throws ParseException {Token a,b;
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IMPORT:{
        Importacao();
        break;
        }
      case COMENT:{
        a = jj_consume_token(COMENT);
cod.add(a);
        break;
        }
      case TIPOINT:
      case TIPODOUBLE:
      case TIPOCHAR:
      case TIPOSTRING:
      case TIPOBOOLEAN:
      case TIPOVOID:{
        Funcao();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FIRST:{
      Execucao();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMENT:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      b = jj_consume_token(COMENT);
cod.add(b);
    }
    jj_consume_token(0);
}

  final public void Funcao() throws ParseException {Token a=null,b; Variable var=null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIPOVOID:{
      a = jj_consume_token(TIPOVOID);
cod.add(a);cod.setHasReturn(true);
      break;
      }
    case TIPOINT:
    case TIPODOUBLE:
    case TIPOCHAR:
    case TIPOSTRING:
    case TIPOBOOLEAN:{
      a = TipoVar();
cod.openFunc();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
cod.setScope(a.kind);
    var = DeclaraVar(a);
    a = jj_consume_token(ABREPAR);
cod.add(a);cod.openBloco();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIPOINT:
    case TIPODOUBLE:
    case TIPOCHAR:
    case TIPOSTRING:
    case TIPOBOOLEAN:{
      FuncPar(var);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    b = jj_consume_token(FECHAPAR);
cod.add(b);
    Bloco();
cod.closeBloco();cod.closeFunc();
}

  final public void FuncPar(Variable var) throws ParseException {Token a, b;
    b = TipoVar();
var.addParameter(b.kind);
    DeclaraVar(b);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SEPFUN:{
      a = jj_consume_token(SEPFUN);
cod.add(a);
      FuncPar(var);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
}

  final public void Retorno() throws ParseException {Token a;
    a = jj_consume_token(RETORNO);
cod.add(a);
        cod.openExpressao(cod.getScope());
        cod.setHasReturn(true);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TRUE:
    case FALSE:
    case ABREPAR:
    case NOT:
    case NOMEVAR:
    case STRING:
    case INTEIRO:
    case CARACTER:
    case REAL:
    case PORCENTAGEM:{
      Expressao();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
cod.closeExpressao();
}

  final public Token ChamaFuncao() throws ParseException {Token a,b,exp;
    exp = NomeVar();
    a = jj_consume_token(ABREPAR);
cod.add(a);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TRUE:
    case FALSE:
    case NOMEVAR:
    case STRING:
    case INTEIRO:
    case CARACTER:
    case REAL:
    case PORCENTAGEM:{
      ChamaFuncPar(exp);
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    b = jj_consume_token(FECHAPAR);
cod.add(b);
        cod.checkParameters(exp);
        {if ("" != null) return exp;}
    throw new Error("Missing return statement in function");
}

  final public void ChamaFuncPar(Token exp) throws ParseException {Token a, b=null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOMEVAR:{
      b = NomeVar();
      break;
      }
    case TRUE:
    case FALSE:
    case STRING:
    case INTEIRO:
    case CARACTER:
    case REAL:
    case PORCENTAGEM:{
      b = ValorVar();
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
cod.verifyParameters(exp,b);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SEPFUN:{
      a = jj_consume_token(SEPFUN);
cod.add(a);
      ChamaFuncPar(exp);
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
}

  final public void Importacao() throws ParseException {Token a,b;
    a = jj_consume_token(IMPORT);
    b = jj_consume_token(STRING);
try{
                        String fname = b.image;
                        fname = fname.substring(0, fname.length()-1);
                        fname = fname.substring(1);

            File f = new File(fname) ;
            CompiladorSloth cs = new CompiladorSloth(new FileReader(f));
            cs.Programa();
        }
                catch (IOException e) {
                System.out.println("An error occurred.");
                e.printStackTrace();
        }
}

  final public void Execucao() throws ParseException {Token a,b,c;
    a = jj_consume_token(FIRST);
cod.add(a);
        cod.verificaFirst();
        cod.setScope(14);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPOINT:
      case TIPODOUBLE:
      case TIPOCHAR:
      case TIPOSTRING:
      case TIPOBOOLEAN:
      case RETORNO:
      case IF:
      case FOR:
      case WHILE:
      case FOREACH:
      case WRITE:
      case COMENT:
      case NOMEVAR:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPOINT:
      case TIPODOUBLE:
      case TIPOCHAR:
      case TIPOSTRING:
      case TIPOBOOLEAN:
      case RETORNO:
      case IF:
      case FOR:
      case WHILE:
      case FOREACH:
      case WRITE:
      case NOMEVAR:{
        Linha();
        break;
        }
      case COMENT:{
        b = jj_consume_token(COMENT);
cod.add(b);
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    c = jj_consume_token(LAST);
cod.add(c);
}

  final public void Linha() throws ParseException {Token a;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIPOINT:
    case TIPODOUBLE:
    case TIPOCHAR:
    case TIPOSTRING:
    case TIPOBOOLEAN:
    case RETORNO:
    case WRITE:
    case NOMEVAR:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case WRITE:{
        Write();
        break;
        }
      case TIPOINT:
      case TIPODOUBLE:
      case TIPOCHAR:
      case TIPOSTRING:
      case TIPOBOOLEAN:
      case NOMEVAR:{
        ManVar();
        break;
        }
      case RETORNO:{
        Retorno();
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      a = jj_consume_token(EOL);
cod.add(a);
      break;
      }
    case IF:
    case FOR:
    case WHILE:
    case FOREACH:{
      FluxoDados();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void Write() throws ParseException {Token a,b,c;
    a = jj_consume_token(WRITE);
cod.add(a);
    b = jj_consume_token(ABREPAR);
cod.add(b);
        cod.openExpressao(12);
    Expressao();
cod.closeExpressao();
    c = jj_consume_token(FECHAPAR);
cod.add(c);
}

  final public void ManVar() throws ParseException {Token a,b;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIPOINT:
    case TIPODOUBLE:
    case TIPOCHAR:
    case TIPOSTRING:
    case TIPOBOOLEAN:{
      a = TipoVar();
      ManVarSeq(a);
      break;
      }
    case NOMEVAR:{
      if (jj_2_2(3)) {
        b = NomeVar();
        Atribuicao(cod.getVarType(b)+9);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NOMEVAR:{
          ChamaFuncao();
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void ManVarSeq(Token b) throws ParseException {Token a;
    DeclaraVar(b);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SEPFUN:{
      a = jj_consume_token(SEPFUN);
cod.add(a);
      ManVarSeq(b);
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      ;
    }
}

  final public Token TipoVar() throws ParseException {Token a=null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIPOBOOLEAN:{
      a = jj_consume_token(TIPOBOOLEAN);
      break;
      }
    case TIPOCHAR:{
      a = jj_consume_token(TIPOCHAR);
      break;
      }
    case TIPODOUBLE:{
      a = jj_consume_token(TIPODOUBLE);
      break;
      }
    case TIPOINT:{
      a = jj_consume_token(TIPOINT);
      break;
      }
    case TIPOSTRING:{
      a = jj_consume_token(TIPOSTRING);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
cod.add(a);
                {if ("" != null) return a;}
    throw new Error("Missing return statement in function");
}

  final public Variable DeclaraVar(Token d) throws ParseException {Token a,b,c; Variable var=null;
    a = jj_consume_token(NOMEVAR);
cod.add(a);
                var=cod.addDVarList(a.image, d.kind);
    if (jj_2_3(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ABREVET:{
        b = jj_consume_token(ABREVET);
cod.add(b);
        cod.openExpressao(9);
        Expressao();
cod.closeExpressao();
        c = jj_consume_token(FECHAVET);
cod.add(c);
        break;
        }
      case IGUALDADE:{
        Atribuicao(d.kind);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
{if ("" != null) return var;}
    throw new Error("Missing return statement in function");
}

  final public Token NomeVar() throws ParseException {Token a,b,c;
    a = jj_consume_token(NOMEVAR);
cod.verifyVarList(a);
        cod.add(a);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ABREVET:{
      b = jj_consume_token(ABREVET);
cod.add(b);
        cod.openExpressao(9);
      Expressao();
cod.closeExpressao();
      c = jj_consume_token(FECHAVET);
cod.add(c);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      ;
    }
{if ("" != null) return a;}
    throw new Error("Missing return statement in function");
}

  final public void Atribuicao(int kind) throws ParseException {Token a;
    a = jj_consume_token(IGUALDADE);
cod.add(a);cod.openExpressao(kind);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case GET:{
      Read();
      break;
      }
    case TRUE:
    case FALSE:
    case ABREPAR:
    case NOT:
    case NOMEVAR:
    case STRING:
    case INTEIRO:
    case CARACTER:
    case REAL:
    case PORCENTAGEM:{
      Expressao();
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
cod.closeExpressao();
}

  final public void Read() throws ParseException {Token a,b,c;
    a = jj_consume_token(GET);
cod.add(a);cod.addToExp(a);
    b = jj_consume_token(ABREPAR);
cod.add(b);
    c = jj_consume_token(FECHAPAR);
cod.add(c);
}

  final public void Expressao() throws ParseException {Token a,b,c,exp;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ABREPAR:{
      a = jj_consume_token(ABREPAR);
cod.add(a);cod.openParExp(a);
      label_4:
      while (true) {
        Expressao();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TRUE:
        case FALSE:
        case ABREPAR:
        case NOT:
        case NOMEVAR:
        case STRING:
        case INTEIRO:
        case CARACTER:
        case REAL:
        case PORCENTAGEM:{
          ;
          break;
          }
        default:
          jj_la1[21] = jj_gen;
          break label_4;
        }
      }
      b = jj_consume_token(FECHAPAR);
cod.add(b);cod.closeParExp(b);
      break;
      }
    case NOT:{
      c = jj_consume_token(NOT);
cod.add(c);cod.addOpToExp(c);
      Expressao();
      break;
      }
    case TRUE:
    case FALSE:
    case STRING:
    case INTEIRO:
    case CARACTER:
    case REAL:
    case PORCENTAGEM:{
      exp = ValorVar();
cod.addToExp(exp);
      break;
      }
    case NOMEVAR:{
      if (jj_2_4(3)) {
        exp = ChamaFuncao();
cod.addToExp(exp);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NOMEVAR:{
          exp = NomeVar();
          break;
          }
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
cod.addToExp(exp);
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_5(2)) {
      Operador();
      Expressao();
    } else {
      ;
    }
}

  final public void Operador() throws ParseException {Token a=null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ADD:
    case SUB:
    case MULT:
    case MOD:
    case DIV:
    case POW:{
      a = OpArit();
      break;
      }
    case IGUAL:
    case DIF:
    case MAIOR:
    case MENOR:
    case MAIGUAL:
    case MEIGUAL:
    case AND:
    case OR:
    case XOR:{
      a = OpRelac();
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
cod.addOpToExp(a);
}
